Fix: robust CORS origin parsing for production